--- a/Test JM/Attempt/jm-8april-2025-attempt.html
+++ b/Test JM/Attempt/jm-8april-2025-attempt.html
@@ -112,6 +112,7 @@ const testData = [
     {
         id: 1,
         section: "Physics (MCQ)",
+        chapter: "Optics",
         type: "mcq",
         questionText: `A concavo-convex lens of refractive index 1.5 and the radii of curvature of its surfaces are 30 cm and 20 cm, respectively. The concave surface is upwards and is filled with a liquid of refractive index 1.3. The focal length of the liquid-glass combination will be`,
         options: [
@@ -141,6 +142,7 @@ const testData = [
     {
         id: 2,
         section: "Physics (MCQ)",
+        chapter: "Thermodynamics",
         type: "mcq",
         questionText: `A monoatomic gas having \\(\\gamma = \\frac{5}{3}\\) is stored in a thermally insulated container and the gas is suddenly compressed to \\(\\left(\\frac{1}{8}\\right)^{th}\\) of its initial volume. The ratio of final pressure and initial pressure is: <br> (\\(\\gamma\\) is the ratio of specific heats of the gas at constant pressure and at constant volume)`,
         options: ["16", "32", "28", "40"],
@@ -162,6 +164,7 @@ const testData = [
     {
         id: 3,
         section: "Physics (MCQ)",
+        chapter: "Error Analysis",
         type: "mcq",
         questionText: `A quantity Q is formulated as \\( Q = X^{-2} Y^{+\\frac{3}{2}} Z^{-\\frac{2}{5}} \\). X, Y, and Z are independent parameters which have fractional errors of 0.1, 0.2, and 0.5, respectively in measurement. The maximum fractional error of Q is`,
         options: ["0.6", "0.8", "0.7", "0.1"],
@@ -182,6 +185,7 @@ const testData = [
     {
         id: 4,
         section: "Physics (MCQ)",
+        chapter: "Optics",
         type: "mcq",
         questionText: `A convex lens of focal length 30 cm is placed in contact with a concave lens of focal length 20 cm. An object is placed at 20 cm to the left of this lens system. The distance of the image from the lens in cm is _______`,
         options: ["\\(\\frac{60}{7}\\)", "15", "45", "30"],
@@ -206,6 +210,7 @@ const testData = [
     {
         id: 5,
         section: "Physics (MCQ)",
+        chapter: "Nuclear Physics",
         type: "mcq",
         questionText: `For a nucleus of mass number A and radius R, the mass density of nucleus can be represented as`,
         options: [
@@ -232,6 +237,7 @@ const testData = [
     {
         id: 6,
         section: "Physics (MCQ)",
+        chapter: "Rotational Dynamics",
         type: "mcq",
         questionText: `A rod of linear mass density '\\(\\lambda\\)' and length 'L' is bent to form a ring of radius 'R'. Moment of inertia of ring about any of its diameter is.`,
         options: [
@@ -260,6 +266,7 @@ const testData = [
         id: 7,
         section: "Physics (MCQ)",
         type: "mcq",
+        chapter: "Thermodynamics",
         questionText: `Water falls from a height of 200 m into a pool. Calculate the rise in temperature of the water assuming no heat dissipation from the water in the pool. <br> (Take \\( g = 10 \\text{ m/s}^2 \\), specific heat of water = 4200 J/(kg K))`,
         options: ["0.36 K", "0.23 K", "0.48 K", "0.14 K"],
         correctAnswer: 2, // Index for 0.48 K
@@ -281,6 +288,7 @@ const testData = [
     {
         id: 8,
         section: "Physics (MCQ)",
+        chapter: "Mechanical Properties of Solids",
         type: "mcq",
         questionText: `A 3 m long wire of radius 3 mm shows an extension of 0.1 mm when loaded vertically by a mass of 50 kg in an experiment to determine Young's modulus. The value of Young's modulus of the wire as per this experiment is \\( P \\times 10^{11} \\text{ Nm}^{-2} \\), where the value of P is: (Take \\( g = 3\\pi \\text{ m/s}^2 \\))`,
         options: ["2.5", "25", "10", "5"],
@@ -305,6 +313,7 @@ const testData = [
     {
         id: 9,
         section: "Physics (MCQ)",
+        chapter: "Waves",
         type: "mcq",
         questionText: `The amplitude and phase of a wave that is formed by the superposition of two harmonic travelling waves, \\( y_1(x, t) = 4 \\sin(kx - \\omega t) \\) and \\( y_2(x, t) = 2 \\sin(kx - \\omega t + \\frac{2\\pi}{3}) \\), are: <br> (Take the angular frequency of initial waves same as \\( \\omega \\))`,
         options: [
@@ -338,6 +347,7 @@ const testData = [
     {
         id: 10,
         section: "Physics (MCQ)",
+        chapter: "Waves",
         type: "mcq",
         questionText: `Two strings with circular cross section and made of same material, are stretched to have same amount of tension. A transverse wave is then made to pass through both the strings. The velocity of the wave in the first string having the radius of cross section R is \\( v_1 \\), and that in the other string having radius of cross section R/2 is \\( v_2 \\). Then \\( \\frac{v_2}{v_1} = \\)`,
         options: ["8", "4", "2", "\\( \\sqrt{2} \\)"],
@@ -361,6 +371,7 @@ const testData = [
     {
         id: 11,
         section: "Physics (MCQ)",
+        chapter: "Electrostatics",
         type: "mcq",
         questionText: `Two metal spheres of radius R and 3R have same surface charge density \\( \\sigma \\). If they are brought in contact and then separated, the surface charge density on smaller and bigger sphere becomes \\( \\sigma_1 \\) and \\( \\sigma_2 \\), respectively. The ratio \\( \\frac{\\sigma_1}{\\sigma_2} \\) is`,
         options: ["\\( \\frac{1}{3} \\)", "\\( \\frac{1}{9} \\)", "9", "3"],
@@ -387,6 +398,7 @@ const testData = [
     {
         id: 12,
         section: "Physics (MCQ)",
+        chapter: "Projectile Motion",
         type: "mcq",
         questionText: `Two balls with same mass and initial velocity, are projected at different angles in such a way that maximum height reached by first ball is 8 times higher than that of the second ball. \\( T_1 \\) and \\( T_2 \\) are the total flying times of first and second ball, respectively, then the ratio of \\( T_1 \\) and \\( T_2 \\) is`,
         options: ["2 : 1", "\\( \\sqrt{2} \\) : 1", "\\( 2\\sqrt{2} \\) : 1", "4 : 1"],
@@ -409,6 +421,7 @@ const testData = [
     {
         id: 13,
         section: "Physics (MCQ)",
+        chapter: "Diodes",
         type: "mcq",
         questionText: `The output voltage in the following circuit is (Consider ideal diode case) <br> <img src="" alt="Circuit Diagram Placeholder">`,
         options: ["0 V", "+5 V", "-5 V", "10 V"],
@@ -431,6 +444,7 @@ const testData = [
     {
         id: 14,
         section: "Physics (MCQ)",
+        chapter: "Magnetism",
         type: "mcq",
         questionText: `Figure shows a current carrying square loop ABCD of edge length 'a' lying in a plane. If the resistance of the ABC part is r and that of ADC part is 2r, then the magnitude of the resultant magnetic field at centre of the square loop is <br> <img src="" alt="Square Loop Diagram Placeholder">`,
         options: [
@@ -459,6 +473,7 @@ const testData = [
     {
         id: 15,
         section: "Physics (MCQ)",
+        chapter: "Electrostatics",
         type: "mcq",
         questionText: `Given below are two statements: one is labelled as Assertion A and the other is labelled as Reason R. <br>
             <b>Assertion A :</b> Work done in moving a test charge between two points inside a uniformly charged spherical shell is zero, no matter which path is chosen. <br>
